--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,17 +48,14 @@ h6 {
 }
 
 #main {
+  font-family: sans-serif;
   height: 100vh;
   width: 100vw;
   display: flex;
 }
 
-#toolbox {
-  width: 400px;
-  border: 1px solid black;
-}
-
-#workspace {
-  border: 1px solid black;
-  flex-grow: 1;
+.box {
+  width: 200px;
+  height: 100px;
+  cursor: grab;
 }
