--- a/src/app/projects/header.module.css
+++ b/src/app/projects/header.module.css
@@ -1,6 +1,30 @@
-.header {
-  height: 3rem;
+.container {
+  height: 100%;
+  padding: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding-left: var(--mantine-spacing-md);
   padding-right: var(--mantine-spacing-md);
-  background: var(--mantine-primary-color-0);
+  background-color: light-dark(
+    var(--mantine-color-gray-0),
+    var(--mantine-color-dark-6)
+  );
+}
+
+.user {
+  color: light-dark(var(--mantine-color-black), var(--mantine-color-dark-0));
+  padding: var(--mantine-spacing-xs) var(--mantine-spacing-sm);
+  border-radius: var(--mantine-radius-sm);
+  transition: background-color 100ms ease;
+
+  &:hover {
+    background-color: light-dark(
+      var(--mantine-color-white),
+      var(--mantine-color-dark-8)
+    );
+  }
+}
+
+.userActive {
 }
