--- a/src/app/projects/[id]/editor/blocks/blocks.module.css
+++ b/src/app/projects/[id]/editor/blocks/blocks.module.css
@@ -38,6 +38,19 @@
   align-items: center;
 }
 
+.innerDropZone {
+  background-color: rgba(255, 255, 255, 0.3);
+  min-width: 24px;
+  min-height: 24px;
+  border-radius: 2px;
+  border: 2px dashed rgba(255, 255, 255, 0.7);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 'all 0.2s ease-in-out';
+}
+
 .blockDropZone {
   background-color: red;
   height: 34px;
