--- a/src/app/projects/[id]/editor/blocks/blocks.module.css
+++ b/src/app/projects/[id]/editor/blocks/blocks.module.css
@@ -41,6 +41,7 @@
 .innerDropZone {
   background-color: rgba(255, 255, 255, 0.3);
   min-width: 24px;
+  width: 100%;
   min-height: 24px;
   border-radius: 2px;
   border: 2px dashed rgba(255, 255, 255, 0.7);
