--- a/src/app/projects/[id]/editor/blocks/blocks.module.css
+++ b/src/app/projects/[id]/editor/blocks/blocks.module.css
@@ -59,7 +59,10 @@
   transition: 'all 0.2s ease-in-out';
 }
 
-.blockDropZone {
-  background-color: red;
-  height: 34px;
+.outerDropzone {
+  height: 20px;
+  left: 0;
+  right: 0;
+  border-radius: 4px;
+  transition: 'opacity 0.2s ease-in';
 }
