--- a/src/app/projects/[id]/editor/blocks/blocks.module.css
+++ b/src/app/projects/[id]/editor/blocks/blocks.module.css
@@ -46,9 +46,9 @@
   align-items: center;
 }
 
-.innerDropZone {
+.innerDropzone {
   background-color: rgba(255, 255, 255, 0.3);
-  min-width: 24px;
+  min-width: 40px;
   width: 100%;
   min-height: 24px;
   border-radius: 2px;
