--- a/src/app/projects/[id]/editor/blocks/blocks.module.css
+++ b/src/app/projects/[id]/editor/blocks/blocks.module.css
@@ -69,6 +69,7 @@
 
 .inputText {
   width: 35px;
+  max-width: 150px;
   background-color: rgba(255, 255, 255, 0.2);
   border: 1px solid rgba(255, 255, 255, 0.4);
   border-radius: 10px;
@@ -78,13 +79,14 @@
   transition:
     background-color 0.15s ease,
     border-color 0.15s ease;
+  box-sizing: border-box;
 }
 
-.input:focus {
+.inputText:focus {
   background-color: rgba(255, 255, 255, 0.3);
   border-color: rgba(255, 255, 255, 0.6);
 }
 
-.input::placeholder {
+.inputText::placeholder {
   color: rgba(255, 255, 255, 0.7);
 }
