--- a/src/app/projects/[id]/editor/blocks/blocks.module.css
+++ b/src/app/projects/[id]/editor/blocks/blocks.module.css
@@ -89,6 +89,7 @@
     background-color 0.15s ease,
     border-color 0.15s ease;
   box-sizing: border-box;
+  font-size: 14px;
 }
 
 .inputText:focus {
